# oshin-adminops-dbt

./: README.md
.devcontainer/dbt/: devcontainer.json
dbt/: .gitignore  Dockerfile  compose.yml  pyproject.toml
dbt/.dbt/: .user.yml
dbt/admin_ops/: dbt_project.yml  package-lock.yml  packages.yml
dbt/admin_ops/edr_target/: elementary_report.html
dbt/admin_ops/models/: sources.yml
dbt/admin_ops/models/marts/daily/: daily_project_costs.sql  daily_resource_usage.sql  daily_service_cost.sql
dbt/admin_ops/models/marts/monitoring/: billing_anomalies.sql
dbt/admin_ops/models/marts/monthly/: monthly_credit_type_summary.sql  monthly_project_costs.sql  monthly_service_costs.sql
dbt/admin_ops/models/staging/: stg_google_cloud_billing_export.sql
