[tool.poetry]
name = "dbt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.setuptools.package-data]
"workflows" = ["py.typed"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
elementary-data = {extras = ["bigquery"], version = "^0.16.2"}
setuptools = "^75.8.1"
python-dotenv = "^1.0.1"
dagster = "^1.10.6"
dagster-dbt = "^0.26.6"
dagster-gcp = "^0.26.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
dbt-osmosis = "~0.13"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.23.2"}

[tool.poetry.group.dbt]
optional = true

[tool.poetry.group.dbt.dependencies]
dbt-core = "~1.8"
dbt-bigquery = "~1.8"
jinja2 = "~3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
